--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -8,6 +8,7 @@
         {% endblock %}
 
         {% block javascripts %}
+            <script src="https://kit.fontawesome.com/c13354403e.js" crossorigin="anonymous"></script>
             <script src="{{ asset('js/main.js') }}"></script>
         {% endblock %}
     </head>
