--- a/templates/pages/index.html.twig
+++ b/templates/pages/index.html.twig
@@ -8,7 +8,7 @@
 {% block body %}
 
 
-    <i id="homepage_redo1" class="fas fa-redo fa-3x">ON HOLIDAYS</i>
+    <i id="homepage_redo1" class="fas fa-mug-hot fa-3x">ON HOLIDAYS</i>
 
 {% endblock %}
 {% block javascripts %}
