--- a/templates/pages/index.html.twig
+++ b/templates/pages/index.html.twig
@@ -7,8 +7,10 @@
 {% endblock %}
 {% block body %}
 
+    <div id="coffee">
 
-    <i id="homepage_redo1" class="fas fa-mug-hot fa-3x">ON HOLIDAYS</i>
+    </div>
+
 
 {% endblock %}
 {% block javascripts %}
