--- a/public/css/pages/homepage.scss
+++ b/public/css/pages/homepage.scss
@@ -1,6 +1,7 @@
 body {
   background-color: #AAAAAA;
-  margin: 0 auto;
+  max-width: 960px;
+
 }
 
 #mug03{
@@ -19,5 +20,5 @@ body {
 }
 
 #coffee{
-  //font-size: 40rem;
+  position: 33%;
 }
