--- a/templates/pages/equalizer.html.twig
+++ b/templates/pages/equalizer.html.twig
@@ -7,8 +7,8 @@
 {% endblock %}
 {% block body %}
 
-    <div id="equalizer">
-    e
+    <div class="equalizerClass" id="equalizer">
+
     </div>
 
 
