--- a/public/css/pages/equalizer.css
+++ b/public/css/pages/equalizer.css
@@ -8,10 +8,10 @@ body {
   flex-wrap: wrap; }
 
 .box1 {
-  border: 3px double burlywood;
+  border: 3px groove #396a7a;
   border-radius: 15px;
   font-size: 2rem;
-  padding: 5px;
+  padding: 15px;
   margin: 5px; }
 
 /*# sourceMappingURL=equalizer.css.map */
