--- a/public/css/pages/equalizer.scss
+++ b/public/css/pages/equalizer.scss
@@ -10,10 +10,10 @@ body {
 
 }
 .box1{
-  border: 3px double burlywood;
+  border: 3px groove #396a7a;
   border-radius: 15px;
   font-size: 2rem;
-  padding: 5px;
+  padding: 15px;
   margin: 5px;
 
 }
