--- a/templates/pages/prime_numbers.html.twig
+++ b/templates/pages/prime_numbers.html.twig
@@ -3,7 +3,7 @@
 {% block title %}Hello PagesController!{% endblock %}
 {% block stylesheets %}
     {{ parent() }}
-    <link rel="stylesheet" href="{{ asset('css/pages/equalizer.css') }}">
+    <link rel="stylesheet" href="{{ asset('css/pages/prime_numbers.css') }}">
 {% endblock %}
 {% block body %}
 
@@ -15,5 +15,5 @@
 {% endblock %}
 {% block javascripts %}
     {{ parent() }}
-    <script src="{{ asset('js/pages/equalizer.js') }}"></script>
+    <script src="{{ asset('js/pages/prime_numbers.js') }}"></script>
 {% endblock %}
