--- a/public/css/pages/homepage.css
+++ b/public/css/pages/homepage.css
@@ -2,6 +2,20 @@ body {
   background-color: #AAAAAA;
   max-width: 960px; }
 
+.nav {
+  text-align: center;
+  margin-top: 50px;
+  z-index: 1; }
+  .nav__link {
+    text-decoration: none;
+    font-size: 2rem;
+    font-weight: bolder;
+    color: #9d5236;
+    padding: 4px 10px;
+    border: 2px solid #444;
+    border-radius: 10px;
+    background-color: #AAAAAA; }
+
 #mug03 {
   font-size: 40rem;
   position: fixed;
@@ -12,7 +26,7 @@ body {
   margin-left: 5px;
   font-size: 35rem;
   position: fixed;
-  z-index: 0; }
+  z-index: -100; }
 
 #coffee {
   position: 33%; }
