--- a/public/css/pages/homepage.scss
+++ b/public/css/pages/homepage.scss
@@ -2,7 +2,26 @@ body {
   background-color: #AAAAAA;
   max-width: 960px;
 }
+// Navigation
+.nav {
+  text-align: center;
+  margin-top: 50px;
+  z-index: 1;
+  &__link{
+    text-decoration: none;
+    font-size: 2rem;
+    font-weight: bolder;
+    color: #9d5236;
+    padding: 4px 10px;
+    border: 2px solid #444;
+    border-radius: 10px;
+    background-color: #AAAAAA;
 
+
+  }
+}
+
+// Coffee
 #mug03{
   font-size: 40rem;
   position: fixed;
@@ -15,7 +34,7 @@ body {
   margin-left: 5px;
   font-size: 35rem;
   position: fixed;
-  z-index: 0;
+  z-index: -100;
 }
 
 #coffee{
