--- a/public/css/pages/prime_numbers.css
+++ b/public/css/pages/prime_numbers.css
@@ -12,6 +12,7 @@ body {
   border: 3px groove #396a7a;
   border-radius: 15px;
   font-size: 2rem;
+  font-weight: bolder;
   padding: 15px;
   margin: 5px; }
 
