--- a/public/css/pages/homepage.css
+++ b/public/css/pages/homepage.css
@@ -1,6 +1,7 @@
 body {
   background-color: #AAAAAA;
-  max-width: 960px; }
+  max-width: 960px;
+  margin: 0 auto; }
 
 .nav {
   text-align: center;
@@ -17,18 +18,15 @@ body {
     background-color: #AAAAAA; }
 
 #mug03 {
-  font-size: 40rem;
+  font-size: 30rem;
   position: fixed;
   z-index: -150; }
 
 #mug02 {
   margin-top: 45px;
   margin-left: 5px;
-  font-size: 35rem;
+  font-size: 25rem;
   position: fixed;
   z-index: -100; }
-
-#coffee {
-  position: 33%; }
 
 /*# sourceMappingURL=homepage.css.map */
