--- a/templates/pages/index.html.twig
+++ b/templates/pages/index.html.twig
@@ -1,23 +1,31 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello PagesController!{% endblock %}
+{% block title %}Index{% endblock %}
 {% block stylesheets %}
-{{ parent() }}
-    <link rel="stylesheet" href="{{ asset('css/pages/homepage.css') }}">
+    {{ parent() }}
+    <link rel="stylesheet" href="{{ asset('css/pages/index.css') }}">
+    <link rel="stylesheet" href="{{ asset('css/components/menu.css') }}">
 {% endblock %}
 {% block body %}
-
-    <div id="coffee">
-
-    </div>
-    {% if true %}
-    <nav class="nav">
-        <a class="nav__link" href="{{ path('app_prime_numbers') }}">{{ links.apn.no }}.{{ links.apn.title }}</a>
+    <nav id="menu" class="menu">
+        <div id="menuButton" class="">
+            <i id="menuIcon" class="fas fa-landmark fa-3x"></i>
+        </div>
+        <div id="menuObject" class="menuObject hidden">
+            <ul class="menuObject__list">
+                <i id="menuClose" class="far fa-times-circle"></i>
+                {% for i in range(1, 10)  %}
+                <li class="menuObject__list__item">
+                    <a class="menuObject__list__item--link" href="">link {{ i }}</a>
+                </li>
+                {% endfor %}
+            </ul>
+        </div>
     </nav>
-    {% endif %}
 
 {% endblock %}
 {% block javascripts %}
-{{ parent() }}
-    <script src="{{ asset('js/pages/homepage.js') }}"></script>
+    {{ parent() }}
+    <script src="{{ asset('js/pages/index.js') }}"></script>
+    <script src="{{ asset('js/components/menu.js') }}"></script>
 {% endblock %}
