--- a/templates/pages/index.html.twig
+++ b/templates/pages/index.html.twig
@@ -14,11 +14,23 @@
         <div id="menuObject" class="menuObject hidden">
             <ul class="menuObject__list">
                 <i id="menuClose" class="far fa-times-circle"></i>
-                {% for i in range(1, 10)  %}
+
                 <li class="menuObject__list__item">
-                    <a class="menuObject__list__item--link" href="">link {{ i }}</a>
+                    <a class="menuObject__list__item--link" href="">Home</a>
                 </li>
-                {% endfor %}
+                <li class="menuObject__list__item">
+                    <a class="menuObject__list__item--link" href="{{ path('app_prime_numbers') }}">Prime numbers</a>
+                </li>
+                <li class="menuObject__list__item">
+                    <a class="menuObject__list__item--link" href="">Page 2</a>
+                </li>
+                <li class="menuObject__list__item">
+                    <a class="menuObject__list__item--link" href="">Page 3</a>
+                </li>
+                <li class="menuObject__list__item">
+                    <a class="menuObject__list__item--link" href="">Page 4</a>
+                </li>
+
             </ul>
         </div>
     </nav>
