--- a/public/css/components/menu.css
+++ b/public/css/components/menu.css
@@ -1,33 +1,36 @@
 .fa-landmark {
   border: 2px solid #333;
-  border-radius: 0 15px 15px 0;
+  border-radius: 0 0 15px 15px;
   background-color: #444444;
-  padding: 6px 9px 6px 3px;
+  padding: 6px 9px 9px 9px;
   color: #eef;
   cursor: pointer; }
+  .fa-landmark:hover {
+    color: #113; }
 
 .fa-times-circle {
   cursor: pointer;
   color: yellow;
-  margin-left: 50px;
-  margin-bottom: 20px;
+  margin: 20px auto;
   font-size: 3rem; }
+  .fa-times-circle:hover {
+    color: red; }
 
 .menu {
+  text-align: center;
   display: flex;
-  flex-direction: column;
-  align-items: self-start; }
+  flex-direction: column; }
 
 .menuObject {
   background-color: #222;
   border: 2px solid #111;
-  border-radius: 0 15px 15px 0; }
+  border-radius: 0 0 15px 15px; }
   .menuObject__list {
     margin: 10px 15px 10px 30px; }
     .menuObject__list__item {
       list-style: none; }
       .menuObject__list__item--link {
-        font-size: 3rem;
+        font-size: 2rem;
         color: #aaa;
         text-decoration: none;
         text-transform: uppercase; }
