--- a/public/css/components/menu.scss
+++ b/public/css/components/menu.scss
@@ -1,37 +1,42 @@
 // Menu Button styling
 .fa-landmark{
   border: 2px solid #333;
-  border-radius: 0 15px 15px 0;
+  border-radius: 0 0 15px 15px;
   background-color: #444444;
-  padding: 6px 9px 6px 3px;
+  padding: 6px 9px 9px 9px;
   color: #eef;
   cursor: pointer;
+  &:hover{
+    color: #113;
+  }
 }
 // Menu Close styling
 .fa-times-circle{
   cursor: pointer;
   color: yellow;
-  margin-left: 50px;
-  margin-bottom: 20px;
+  margin: 20px auto;
   font-size: 3rem;
+  &:hover{
+    color: red;
+  }
 }
 // Menu Object styling
 .menu{
-
+  text-align: center;
   display: flex;
   flex-direction: column;
-  align-items: self-start;
+  //align-items: self-start;
 }
 .menuObject{
   background-color: #222;
   border: 2px solid #111;
-  border-radius: 0 15px 15px 0;
+  border-radius: 0 0 15px 15px;
   &__list{
     margin: 10px 15px 10px 30px;
     &__item{
       list-style: none;
       &--link{
-        font-size: 3rem;
+        font-size: 2rem;
         color: #aaa;
         text-decoration: none;
         text-transform: uppercase;
