--- a/templates/pages/index.html.twig
+++ b/templates/pages/index.html.twig
@@ -19,7 +19,10 @@
                     <a class="menuObject__list__item--link" href="">Home</a>
                 </li>
                 <li class="menuObject__list__item">
-                    <a class="menuObject__list__item--link" href="{{ path('app_prime_numbers') }}">Prime numbers</a>
+                    <a class="menuObject__list__item--link" href="{{ path('app_prime_numbers') }}">
+                        <i class="fas fa-calculator"></i>
+                        Prime numbers
+                    </a>
                 </li>
                 <li class="menuObject__list__item">
                     <a class="menuObject__list__item--link" href="">Page 2</a>
