--- a/public/css/components/menu.scss
+++ b/public/css/components/menu.scss
@@ -1,3 +1,5 @@
+$bp-tablet: 850px;
+
 // Menu Button styling
 .fa-landmark{
   border: 2px solid #333;
@@ -7,14 +9,14 @@
   color: #eef;
   cursor: pointer;
   &:hover{
-    color: #113;
+    color: #339;
   }
 }
 // Menu Close styling
 .fa-times-circle{
   cursor: pointer;
   color: yellow;
-  margin: 20px auto;
+  margin: 5px auto 10px auto ;
   font-size: 3rem;
   &:hover{
     color: red;
@@ -29,22 +31,31 @@
   text-align: center;
   display: flex;
   flex-direction: column;
-  //align-items: self-start;
+  align-items: center;
 }
 .menuObject{
+
   background-color: #222;
   border: 2px solid #111;
   border-radius: 0 0 15px 15px;
   &__list{
     margin: 10px 15px 10px 30px;
     &__item{
-      padding: 5px 0;
+
+      @media (min-width: $bp-tablet){
+        display: inline;
+      }
+
+      padding: 5px 20px;
       list-style: none;
       &--link{
-        font-size: 2rem;
+        font-size: 1.5rem;
         color: #aaa;
         text-decoration: none;
         text-transform: uppercase;
+        &:hover{
+          color: #88f;
+        }
       }
     }
   }
