--- a/templates/pages/index.html.twig
+++ b/templates/pages/index.html.twig
@@ -13,7 +13,10 @@
         </div>
         <div id="menuObject" class="menuObject hidden">
             <ul class="menuObject__list">
-                <i id="menuClose" class="far fa-times-circle"></i>
+                <div>
+                    <i id="menuClose" class="far fa-times-circle"></i>
+                </div>
+
 
                 <li class="menuObject__list__item">
                     <a class="menuObject__list__item--link" href="">Home</a>
@@ -21,17 +24,17 @@
                 <li class="menuObject__list__item">
                     <a class="menuObject__list__item--link" href="{{ path('app_prime_numbers') }}">
                         <i class="fas fa-calculator"></i>
-                        Prime numbers
+                        Prime&nbspnumbers
                     </a>
                 </li>
                 <li class="menuObject__list__item">
-                    <a class="menuObject__list__item--link" href="">Page 2</a>
+                    <a class="menuObject__list__item--link" href="{{ path('app_oAuth') }}">OAuth</a>
                 </li>
                 <li class="menuObject__list__item">
-                    <a class="menuObject__list__item--link" href="">Page 3</a>
+                    <a class="menuObject__list__item--link" href="">Page3</a>
                 </li>
                 <li class="menuObject__list__item">
-                    <a class="menuObject__list__item--link" href="">Page 4</a>
+                    <a class="menuObject__list__item--link" href="">Page4</a>
                 </li>
 
             </ul>
