--- a/public/css/pages/o_auth.scss
+++ b/public/css/pages/o_auth.scss
@@ -1,3 +1,27 @@
 body {
   background-color: #396a7a;
 }
+.book {
+  margin-top: 20px;
+  &__item{
+    padding: 3px;
+    border: 3px double #eee;
+    background-color: #ccc;
+    border-radius: 5px;
+    max-width: 160px;
+    margin: 10px 20px;
+  }
+  &__title{
+    text-transform: uppercase;
+    font-size: 1rem;
+    text-align: center;
+  }
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+
+  &__img{
+    width:100%;
+
+  }
+}
