--- a/public/css/pages/o_auth.scss
+++ b/public/css/pages/o_auth.scss
@@ -5,7 +5,7 @@ body {
   margin-top: 20px;
   &__item{
     padding: 3px;
-    border: 3px double #eee;
+    border: 3px groove #eee;
     background-color: #ccc;
     border-radius: 5px;
     max-width: 150px;
