--- a/public/css/pages/index.scss
+++ b/public/css/pages/index.scss
@@ -1,3 +1,32 @@
+$bp-tablet: 600px;
+
 body {
   background-color: #396a7a;
+}
+.fa-sign-out-alt {
+  font-size: 2rem;
+  cursor: pointer;
+}
+.content{
+  margin: 20px auto;
+  max-width: 550px;
+  @media(max-width: $bp-tablet){
+    max-width: 320px;
+  }
+  &__box{
+    display: flex;
+    flex-direction: column;
+    border: 1px solid black;
+    border-radius: 10px;
+    padding: 15px;
+    background-color: #77AAff;
+    &--button{
+      text-align: right;
+      color: green;
+    }
+    &--content{
+      font-size: 1.2rem;
+      padding: 5px;
+    }
+  }
 }
