--- a/public/css/pages/index.css
+++ b/public/css/pages/index.css
@@ -22,6 +22,9 @@ body {
       text-align: right;
       color: green; }
     .content__box--content {
+      display: flex;
+      flex-direction: column;
+      overflow-wrap: break-word;
       font-size: 1.2rem;
       padding: 5px; }
 
