--- a/public/css/pages/index.scss
+++ b/public/css/pages/index.scss
@@ -25,6 +25,9 @@ body {
       color: green;
     }
     &--content{
+      display: flex;
+      flex-direction: column;
+      overflow-wrap: break-word;
       font-size: 1.2rem;
       padding: 5px;
     }
