--- a/templates/pages/index.html.twig
+++ b/templates/pages/index.html.twig
@@ -31,7 +31,7 @@
                     <a id="o_auth" class="menuObject__list__item--link" href="{{ path('app_oAuth') }}">OAuth</a>
                 </li>
                 <li class="menuObject__list__item">
-                    <a class="menuObject__list__item--link" href="">Page3</a>
+                    <a class="menuObject__list__item--link" href="{{ path('app_shop') }}">Shop</a>
                 </li>
                 <li class="menuObject__list__item">
                     <a class="menuObject__list__item--link" href="">Page4</a>
