--- a/templates/shop.html.twig
+++ b/templates/shop.html.twig
@@ -8,6 +8,7 @@
         <link rel="stylesheet" href="{{ asset('css/shop/shop.css') }}">
     {% endblock %}
     <script src="https://kit.fontawesome.com/c13354403e.js" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.3/TweenMax.min.js"></script>
 
 </head>
 <body>
