--- a/public/css/shop/components/component1.scss
+++ b/public/css/shop/components/component1.scss
@@ -1,8 +1,39 @@
 .fa-bars {
   margin: 5px;
-  color: #ba7a1e;
+  color: #60441b;
   font-size: 3rem;
   transform: rotate(-90deg);
   cursor: pointer;
 
+}
+$bp-mobile: 300px;
+$bp-tablet: 660px;
+.menu {
+  position: relative;
+  width: 100%;
+  left: -100%;
+  @media (max-width: $bp-mobile){
+    left: -$bp-mobile;
+  }
+  @media (max-width: $bp-tablet){
+    left: -$bp-tablet;
+  }
+  top: 0;
+  background-color: #fff;
+  padding: 5px;
+  &__list{
+    &__item{
+      &__link{
+        cursor: pointer;
+        color: #ddd;
+      }
+    }
+  }
+}
+.primary {
+  font-size: 1.5rem;
+}
+.hidden{
+  display: none;
+  visibility: hidden;
 }
