--- a/public/css/shop/components/component1.css
+++ b/public/css/shop/components/component1.css
@@ -5,7 +5,13 @@
   transform: rotate(-90deg);
   cursor: pointer; }
 
+.fa-times {
+  color: white;
+  font-size: 2.5rem; }
+
 .menu {
+  display: flex;
+  align-items: center;
   position: relative;
   width: 100%;
   left: -100%;
@@ -21,6 +27,10 @@
   .menu__list__item__link {
     cursor: pointer;
     color: #ddd; }
+  .menu__exitButton {
+    width: 100%;
+    text-align: right;
+    padding-right: 10px; }
 
 .primary {
   font-size: 1.5rem; }
