--- a/public/css/shop/components/component1.scss
+++ b/public/css/shop/components/component1.scss
@@ -1,3 +1,4 @@
+// menu main button
 .fa-bars {
   margin: 5px;
   color: #60441b;
@@ -6,9 +7,16 @@
   cursor: pointer;
 
 }
+// menu exit button
+.fa-times{
+  color:white;
+  font-size: 2.5rem;
+}
 $bp-mobile: 300px;
 $bp-tablet: 660px;
 .menu {
+  display: flex;
+  align-items: center;
   position: relative;
   width: 100%;
   left: -100%;
@@ -29,7 +37,13 @@ $bp-tablet: 660px;
       }
     }
   }
+  &__exitButton{
+    width: 100%;
+    text-align: right;
+    padding-right: 10px;
+  }
 }
+
 .primary {
   font-size: 1.5rem;
 }
