--- a/templates/shop/index.html.twig
+++ b/templates/shop/index.html.twig
@@ -9,6 +9,22 @@
 {% block body %}
 <div class="container">
     <nav id="nav" class="nav">
+        <div>
+            <i id="mainMenuButton" class="fas fa-bars"></i>
+        </div>
+        <div id="menu" class="menu">
+            <ul class="menu__list">
+                <li class="menu__list__item">
+                    <a class="menu__list__item__link primary">HOME</a>
+                </li>
+            </ul>
+            <span class="primary">
+                <i id="caret1" class="far fa-caret-square-down"></i>
+            </span>
+            <div class="menu__exitButton">
+                <i id="exitMenuButton" class="fas fa-times"></i>
+            </div>
+        </div>
 
     </nav>
 
