--- a/public/css/shop/components/component1.css
+++ b/public/css/shop/components/component1.css
@@ -1,18 +1,23 @@
 .fa-bars {
   margin: 5px;
-  color: #60441b;
-  font-size: 3rem;
+  color: #282523;
+  font-size: 2rem;
   transform: rotate(-90deg);
   cursor: pointer; }
 
 .fa-times {
   color: white;
-  font-size: 2.5rem; }
+  font-size: 2rem;
+  cursor: pointer; }
+
+.fa-caret-square-down {
+  color: white;
+  padding: 5px; }
 
 .menu {
   display: flex;
   align-items: center;
-  position: relative;
+  position: absolute;
   width: 100%;
   left: -100%;
   top: 0;
@@ -34,6 +39,9 @@
 
 .primary {
   font-size: 1.5rem; }
+
+.secondary {
+  font-size: 1.2rem; }
 
 .hidden {
   display: none;
