--- a/public/css/shop/components/component1.scss
+++ b/public/css/shop/components/component1.scss
@@ -16,14 +16,15 @@
 // caret button
 .fa-caret-square-down{
   color: white;
-  padding:5px;
+  padding-left:10px;
+  cursor: pointer;
 }
 // Menu styling
 $bp-mobile: 300px;
 $bp-tablet: 660px;
 .menu {
   display: flex;
-  align-items: center;
+  align-items: start;
   position: absolute;
   width: 100%;
   left: -100%;
