--- a/templates/shop/index.html.twig
+++ b/templates/shop/index.html.twig
@@ -16,6 +16,13 @@
             <ul class="menu__list">
                 <li class="menu__list__item">
                     <a class="menu__list__item__link primary">HOME</a>
+                    <ul id="submenu1" class="menu__list hidden">
+                        <li class="menu__list__item">
+                            <a class="menu__list__item__link secondary">
+                                link 1_1
+                            </a>
+                        </li>
+                    </ul>
                 </li>
             </ul>
             <span class="primary">
