--- a/public/css/shop/components/component1.css
+++ b/public/css/shop/components/component1.css
@@ -18,7 +18,7 @@
 .menu {
   display: flex;
   align-items: start;
-  position: absolute;
+  position: fixed;
   width: 100%;
   left: -100%;
   top: 0;
@@ -39,13 +39,19 @@
     padding-right: 10px; }
 
 .primary {
-  font-size: 1.5rem; }
+  font-size: 2rem; }
 
 .secondary {
-  font-size: 1.2rem; }
+  font-size: 2rem;
+  font-family: Gabriola, serif; }
 
 .hidden {
   display: none;
   visibility: hidden; }
+
+.submenu {
+  text-align: center;
+  background-color: #111111;
+  padding: 5px 0; }
 
 /*# sourceMappingURL=component1.css.map */
