--- a/public/css/shop/shop.scss
+++ b/public/css/shop/shop.scss
@@ -2,7 +2,9 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+
 }
 body {
-  background-color: #5eb5e0;
+
+  background-color: #7d99a5;
 }
