logic repared in JS - all working, next: back great animations

--- a/public/css/shop/components/component1.css
+++ b/public/css/shop/components/component1.css
@@ -46,8 +46,8 @@
   font-family: Gabriola, serif; }
 
 .hidden {
-  display: none;
-  visibility: hidden; }
+  visibility: hidden;
+  display: none; }
 
 .submenu {
   text-align: center;
