all ok with animations sending for production

--- a/templates/shop/index.html.twig
+++ b/templates/shop/index.html.twig
@@ -55,7 +55,7 @@
 
         </div>
     </div>
-    <section id="section1" class="hidden">
+    <section id="section1" class="section1 hidden">
         <div class="card">
             <div class="card__box">
                 <img class="card__box__img" src="{{ asset('img/svg/shop/lockedbook.svg') }}" alt="image of the book">
