--- a/public/css/shop/index/about_us.css
+++ b/public/css/shop/index/about_us.css
@@ -1,5 +1,5 @@
 .content {
-  opacity: 1;
+  opacity: 0;
   margin: 40px auto 20px auto;
   text-align: center;
   width: 75%; }
@@ -30,5 +30,8 @@
   margin: 0 auto;
   width: 90%;
   border-bottom: 3px double black; }
+
+.section1 {
+  opacity: 0; }
 
 /*# sourceMappingURL=about_us.css.map */
