--- a/public/css/shop/index/about_us.scss
+++ b/public/css/shop/index/about_us.scss
@@ -1,7 +1,7 @@
 $bp-mobile: 360px;
 
 .content{
-  opacity: 1;
+  opacity: 0;
   margin: 40px auto 20px auto;
   text-align: center;
   width: 75%;
@@ -41,4 +41,7 @@ $bp-mobile: 360px;
     border-bottom: 3px double black;
   }
 
+}
+.section1 {
+  opacity: 0;
 }
